--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
     </form>
 
     <section id="error-btns">
-      <button>Console Log</button>
-      <button>Console Error</button>
-      <button>Console Count</button>
-      <button>Console Warn</button>
-      <button>Console Assert</button>
-      <button>Console Clear</button>
-      <button>Console Dir</button>
-      <button>Console dirxml</button>
-      <button>Console Group Start</button>
-      <button>Console Group End</button>
-      <button>Console Table</button>
-      <button>Start Timer</button>
-      <button>End Timer</button>
-      <button>Console Trace</button>
-      <button>Trigger a Global Error</button>
+      <button id="console-log">Console Log</button>
+      <button id="console-error">Console Error</button>
+      <button id="console-count">Console Count</button>
+      <button id="console-warn">Console Warn</button>
+      <button id="console-assert">Console Assert</button>
+      <button id="console-clear">Console Clear</button>
+      <button id="console-dir">Console Dir</button>
+      <button id="console-dirxml">Console dirxml</button>
+      <button id="console-group-start">Console Group Start</button>
+      <button id="console-group-end">Console Group End</button>
+      <button id="console-table">Console Table</button>
+      <button id="start-timer">Start Timer</button>
+      <button id="end-timer">End Timer</button>
+      <button id="console-trace">Console Trace</button>
+      <button id="trigger-global-error">Trigger a Global Error</button>
     </section>
   </main>
 
@@ -102,6 +102,77 @@
 
     // Start your code here
     // You may move this JS to another file if you wish
+    document.getElementById('console-log').addEventListener('click', () => {
+      console.log("Console log was clicked.");
+    });
+    document.getElementById('console-error').addEventListener('click', () => {
+      console.error("Console error was clicked.");
+    });
+    document.getElementById('console-count').addEventListener('click', () => {
+      console.count("Count Button");
+    });
+    document.getElementById('console-warn').addEventListener('click', () => {
+      console.warn("Warn Button was clicked.");
+    });
+    document.getElementById('console-assert').addEventListener('click', () => {
+      const val = 1;
+      const reason = 'val is expected to be 0.';
+      console.assert(val == 0, {val, reason});
+    });
+    document.getElementById('console-clear').addEventListener('click', () => {
+      console.clear();
+    });
+    // 
+    document.getElementById('console-dir').addEventListener('click', () => {
+      console.dir(document.querySelector('section'));
+    });
+    document.getElementById('console-dirxml').addEventListener('click', () => {
+      console.dirxml(document.querySelector('section'));
+    });
+    document.getElementById('console-group-start').addEventListener('click', () => {
+      console.group('Demo group');
+    });
+    document.getElementById('console-group-end').addEventListener('click', () => {
+      console.groupEnd('Demo group');
+    });
+    document.getElementById('console-table').addEventListener('click', () => {
+      var members = [
+      {
+        name: 'Sahil',
+        team: 'Frontend',
+      },
+      {
+        name: 'Jerry',
+        team: 'Backend',
+      },
+      {
+        name: 'Liam',
+        team: 'Frontend',
+      },
+      {
+        name: 'Andrew',
+        team: 'DevOps',
+      }
+      ];
+      console.table(members);
+    });
+    document.getElementById('start-timer').addEventListener('click', () => {
+      console.time();
+    });
+    document.getElementById('end-timer').addEventListener('click', () => {
+      console.timeEnd();
+    });
+    document.getElementById('console-trace').addEventListener('click', () => {
+      const firstCall = () => { secondCall(); };
+      const secondCall = () => { thirdCall(); };
+      const thirdCall = () => { fourthCall(); };
+      const fourthCall = () => { fifthCall(); };
+      const fifthCall = () => { console.trace(); };
+      firstCall();
+    });
+    document.getElementById('trigger-global-error').addEventListener('click', () => {
+      console.clear();
+    });
   </script>
 </body>
 
