--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     </section>
   </main>
 
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <script>
+    window.TrackJS && TrackJS.install({ 
+      token: "1f5f962bd73a4b33bda88cafe7c346be"
+      // for more configuration options, see https://docs.trackjs.com
+    });
+  </script>                    
   <script>
     window.addEventListener("error", (event) => {
       console.log("Caught the Global Error.");
